--- a/src/main/webapp/css/emplList.css
+++ b/src/main/webapp/css/emplList.css
@@ -1,3 +1,21 @@
-table {
-	width: 600px;
+#pages {
+	display: inline
+}
+
+#pageBar {
+	margin: 25px;
+}
+
+.numberInput {
+	height: 34px;
+	width: 30px;
+	border-radius: 4px;
+	border: 1px solid #ddd;
+	font-size: 16px;
+}
+#goBtn{
+	margin-bottom: 4px;
+}
+#pageNumberLabel{
+	margin-left: 20px;
 }
