simple pagination through custom tag added

--- a/src/main/webapp/css/emplList.css
+++ b/src/main/webapp/css/emplList.css
@@ -2,7 +2,7 @@
 	display: inline
 }
 
-#pageBar {
+.pageBar {
 	margin: 25px;
 }
 
@@ -19,3 +19,9 @@
 #pageNumberLabel{
 	margin-left: 20px;
 }
+
+
+.paginatorList { margin: 2px 6px; list-style: none outside none; }
+.paginatorList li { float: left; padding: 2px 4px; font-size: 1.2em; }
+li.paginatorCurr { font-weight: bold; font-size: 1.5em; margin-top: -2px; }
+li.paginatorLast { float: none; }
