--- a/src/main/webapp/css/emplList.css
+++ b/src/main/webapp/css/emplList.css
@@ -2,26 +2,25 @@
 	display: inline
 }
 
-.pageBar {
-	margin: 25px;
-}
-
 .numberInput {
 	height: 34px;
 	width: 30px;
 	border-radius: 4px;
 	border: 1px solid #ddd;
 	font-size: 16px;
+	
 }
-#goBtn{
+.goBtn{
 	margin-bottom: 4px;
 }
-#pageNumberLabel{
+.goToLabel{
 	margin-left: 20px;
 }
+.pagination{
+	display:inline;
+}
 
-
-.paginatorList { margin: 2px 6px; list-style: none outside none; }
-.paginatorList li { float: left; padding: 2px 4px; font-size: 1.2em; }
-li.paginatorCurr { font-weight: bold; font-size: 1.5em; margin-top: -2px; }
-li.paginatorLast { float: none; }
+.paginationRow{
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
